# nitroDB

./: COMMITS.md  DISTRO.md  README.md  codemagic.yaml  ideas.md  package.json  pyproject.toml
.github/workflows/: release.yml
client/node/: package.json
client/python/: pyproject.toml
client/python/nedb_client/: __init__.py
docs/: SPEC.md  index.html  reference.html
examples/mini-chain/: README.md  mini-chain.mjs
python/nedb/: __init__.py  mongo.py  server.py  wrap_redis.py
rust/: Cargo.toml
rust/crates/aof-db/: Cargo.toml
rust/crates/aof-db/src/: lib.rs
rust/crates/nedb-node/src/: lib.rs
rust/crates/nedb-py/: pyproject.toml
rust/crates/nedb-py/src/: lib.rs
rust/crates/nitrodb/: Cargo.toml
rust/crates/nitrodb/src/: lib.rs
rust/nedb-v2/: Cargo.toml  README.md
rust/nedb-v2/src/: db.rs  graph.rs  index.rs  lib.rs  main.rs  migrate.rs  nql.rs  segment.rs  server.rs  store.rs
test/: smoke.mjs
test/node/: nedb-engine.test.mjs
tests/: test_adapters.py  test_native.py  test_the_will.py
