# nedb-engine — maturin mixed layout: ships a native Rust core (nedb._native)
# alongside the pure-Python package (python/nedb). Native wheels are built per
# platform by CI; the pure-Python code is the always-works fallback.
[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "nedb-engine"
version = "0.1.3"
description = "NEDB — a versioned, self-compressing, time-traveling embedded database (replay-protected, idempotent, relational, searchable). Native Rust core with a pure-Python fallback."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Eth-Interchained" }]
keywords = ["database", "embedded", "mvcc", "time-travel", "versioning",
            "compression", "dedup", "graph", "search", "redis", "git", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/Eth-Interchained/nedb"
Repository = "https://github.com/Eth-Interchained/nedb"

[tool.maturin]
python-source = "python"
module-name = "nedb._native"
manifest-path = "rust/crates/nedb-py/Cargo.toml"
# pure-Python sdist fallback still builds; native wheels carry the compiled core.
