# nedb-engine — pure-Python distribution. The engine, durable AOF persistence,
# and the nedbd server are all pure Python, so we ship a universal py3-none-any
# wheel + sdist that installs on every platform/Python with no toolchain. The
# Rust core (rust/) remains for the napi (npm) addon and future native PyPI
# acceleration, reintroduced additively; `nedb._native` already imports lazily
# and the package works identically without it.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nedb-engine"
version = "0.5.1"
description = "NEDB — a versioned, self-compressing, time-traveling embedded database (replay-protected, idempotent, relational, searchable) with durable AOF persistence and a server daemon (nedbd)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Eth-Interchained" }]
keywords = ["database", "embedded", "mvcc", "time-travel", "versioning",
            "compression", "dedup", "graph", "search", "redis", "git", "persistence", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
]

[project.scripts]
nedbd = "nedb.server:main"

[project.urls]
Homepage = "https://github.com/Eth-Interchained/nedb"
Repository = "https://github.com/Eth-Interchained/nedb"

[tool.hatch.build.targets.wheel]
packages = ["python/nedb"]

[tool.hatch.build.targets.sdist]
include = ["python/nedb", "README.md", "LICENSE"]
