# nedb-engine — pure-Python distribution. The engine, durable AOF persistence,
# and the nedbd server are all pure Python, so we ship a universal py3-none-any
# wheel + sdist that installs on every platform/Python with no toolchain. The
# Rust core (rust/) remains for the napi (npm) addon and future native PyPI
# acceleration, reintroduced additively; `nedb._native` already imports lazily
# and the package works identically without it.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitrodb"
version = "2.4.2"
description = "NEDB — a versioned, self-compressing, time-traveling embedded database (replay-protected, idempotent, relational, searchable) with durable AOF persistence and a server daemon (nedbd)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Eth-Interchained" }]
keywords = ["database", "embedded", "mvcc", "time-travel", "versioning",
            "compression", "dedup", "graph", "search", "redis", "git", "persistence", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
]

dependencies = [
    # AES-256-GCM at-rest encryption (pycryptodome — pre-built wheels for all platforms
    # including Windows MinGW, no cffi / C compiler required).
    # Also accepted: cryptography>=41 (falls back automatically if pycryptodome absent).
    "pycryptodome>=3.19",
]

[project.optional-dependencies]
# Alternative crypto backend (for installations that already have cryptography).
encryption = ["cryptography>=41"]

[project.scripts]
nedbd = "nedb.server:main"

[project.urls]
Homepage = "https://github.com/aiassistsecure/nedb"
Repository = "https://github.com/aiassistsecure/nedb"

[tool.hatch.build.targets.wheel]
packages = ["python/nedb"]

[tool.hatch.build.targets.sdist]
include = ["python/nedb", "README.md", "LICENSE"]
