[workspace]
resolver = "2"
members = [
    "crates/nedb-core",
    "crates/nedb-py",
    "crates/nedb-node",
    "nedb-v2",
]

[workspace.package]
version = "2.0.34"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Eth-Interchained/nedb"
authors = ["Eth-Interchained"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
