[package]
name        = "nedb-core-v2"
version     = "2.0.8"
edition     = "2021"
description = "NEDB v2 — content-addressed DAG storage engine with NQL and HTTP server"
license     = "BUSL-1.1"
repository  = "https://github.com/Eth-Interchained/nedb"

[[bin]]
name = "nedbd"
path = "src/main.rs"

[lib]
name = "nedb_core_v2"
path = "src/lib.rs"

[dependencies]
# Storage
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
blake2       = "0.10"
aes-gcm      = "0.10"
sha2         = "0.10"
hex          = "0.4"

# Concurrency
rayon        = "1"
dashmap      = "5"
parking_lot  = "0.12"

# HTTP server
axum         = { version = "0.7", features = ["json", "query"] }
tokio        = { version = "1",   features = ["full"] }
tower-http   = { version = "0.5", features = ["cors"] }

# Error handling
thiserror    = "1"
anyhow       = "1"

[dev-dependencies]
tempfile     = "3"
