# Maturin pyproject.toml — the native wheel is the COMPLETE nedb-engine package:
# all Python source files + the Rust ._native extension bundled together.
# When pip selects this platform wheel it is fully self-contained; no separate
# pure-Python wheel is needed on supported platforms.

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "nedb-engine"
version = "1.0.5"
description = "NEDB — versioned, self-compressing, time-traveling embedded database with Rust native core"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Eth-Interchained" }]
keywords = ["database", "embedded", "mvcc", "time-travel", "versioning",
            "compression", "dedup", "graph", "search", "persistence", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = ["cryptography>=41"]

[project.scripts]
nedbd = "nedb.server:main"

[project.urls]
Homepage = "https://github.com/Eth-Interchained/nedb"
Repository = "https://github.com/Eth-Interchained/nedb"

[tool.maturin]
# Bundle Python source alongside the Rust extension (mixed Rust/Python layout).
# maturin only honors a python-source that lives INSIDE the project root — a
# "../" path that escapes the crate dir is silently ignored (produces an .so-only
# wheel). So CI stages the package at ./python/nedb before building; see the
# "Stage Python source" step in .github/workflows/release.yml.
python-source = "python"
module-name = "nedb._native"
