# Maturin pyproject.toml — the native wheel is the COMPLETE nedb-engine package:
# all Python source files + the Rust ._native extension bundled together.
# When pip selects this platform wheel it is fully self-contained; no separate
# pure-Python wheel is needed on supported platforms.

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "nitrodb"
version = "2.4.3"
description = "NEDB — versioned, self-compressing, time-traveling embedded database with Rust native core"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Eth-Interchained" }]
keywords = ["database", "embedded", "mvcc", "time-travel", "versioning",
            "compression", "dedup", "graph", "search", "persistence", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = ["pycryptodome>=3.19"]

[project.scripts]
nedbd = "nedb.server:main"

[project.urls]
Homepage = "https://github.com/aiassistsecure/nedb"
Repository = "https://github.com/aiassistsecure/nedb"

[tool.maturin]
# Bundle Python source alongside the Rust extension (mixed Rust/Python layout).
# maturin only honors a python-source that lives INSIDE the project root.
# nedbd-v2 binary is staged into python/nedb/ by CI before maturin runs.
# It is explicitly included via the include list below because maturin's
# python-source only auto-packages .py files and the compiled extension —
# non-.py binaries are silently dropped without an explicit include.
python-source = "python"
module-name = "nedb._native"
include = [
  { path = "python/nedb/nedbd-v2",     format = "wheel" },
  { path = "python/nedb/nedbd-v2.exe", format = "wheel" },
]
